--- a/src/main/webapp/css/compare.css
+++ b/src/main/webapp/css/compare.css
@@ -6,3 +6,18 @@ tr:nth-child(2){
 	
 	padding-left: 50px;
 }
+
+.buttonBack{
+	
+	
+		 background-color: #008CBA; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
